2004-02-05  Pierre Chifflier  <pollux@wzdftpd.net>

	* optimization: removed strcasecmp/strncpy in perm_find_create
	* bugfix: compile error with ipv6 on FreeBSD

2004-02-02  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: site link create/remove (win32/visual)

2004-01-30  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: site link create/remove (posix platforms)

2004-01-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- cvs commit TAG: rel-0-2

	* feature: site unlock file

2004-01-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: incorrect order of arguments in ident request
	* bugfix: socket_connect not working on visual

2004-01-23  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: missing \0 on short msg replies (closes: broken SIZE command)
	* bugfix: wrong locking query method used (visual)
	* bugfix: wrong length showed in log for empty files
	* bugfix: files not locked during upload
	* bugfix: files opened in wrong memory space for upload (visual)
	* bugfix: wzd_cache_gets no working for oneliners (closes: site msg
	show not working for one-line messages).

2004-01-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: fix build for release version
	* visual: removed some warnings

2004-01-19  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: locking files routines

2004-01-15  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: added tools

2004-01-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* ipv6: fix ip formatting in log file

2004-01-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: fix build, IPv6 code compiles (though win2k does not support ipv6)
	* visual: clean up threads when client exit

2004-01-07  Pierre Chifflier  <pollux@wzdftpd.net>

	* wzd_misc.c: fix incorrect free space size reported
	* wzd_socket.c: change socket_connect() to accept IPv6
	* wzd_ClientThread.c: implementation of EPRT (IPv6)
	* wzd_ServerThread.c: ident connection use same net family as control
        connection (IPv6)